// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAccordion behavior closes when clicked twice 1`] = `
<EuiAccordion
  id="6"
  initialIsOpen={false}
  paddingSize="none"
>
  <div
    className="euiAccordion"
  >
    <EuiFlexGroup
      alignItems="center"
      gutterSize="none"
    >
      <div
        className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem>
          <div
            className="euiFlexItem"
          >
            <button
              aria-controls="6"
              aria-expanded={false}
              className="euiAccordion__button"
              onClick={[Function]}
              type="button"
            >
              <EuiFlexGroup
                alignItems="center"
                gutterSize="s"
                responsive={false}
              >
                <div
                  className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                >
                  <EuiFlexItem
                    className="euiAccordion__iconWrapper"
                    grow={false}
                  >
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
                    >
                      <EuiIcon
                        size="m"
                        type="arrowRight"
                      >
                        <EuiIconEmpty
                          className="euiIcon euiIcon--medium euiIcon-isLoading"
                          focusable="false"
                          style={null}
                        >
                          <svg
                            className="euiIcon euiIcon--medium euiIcon-isLoading"
                            focusable="false"
                            height={16}
                            style={null}
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </EuiIconEmpty>
                      </EuiIcon>
                    </div>
                  </EuiFlexItem>
                  <EuiFlexItem
                    className="euiAccordion__buttonContent"
                  >
                    <div
                      className="euiFlexItem euiAccordion__buttonContent"
                    />
                  </EuiFlexItem>
                </div>
              </EuiFlexGroup>
            </button>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <div
      className="euiAccordion__childWrapper"
      id="6"
    >
      <EuiMutationObserver
        observerOptions={
          Object {
            "attributeFilter": Array [
              "style",
            ],
            "childList": true,
            "subtree": true,
          }
        }
        onMutation={[Function]}
      >
        <div>
          <div
            className=""
          />
        </div>
      </EuiMutationObserver>
    </div>
  </div>
</EuiAccordion>
`;

exports[`EuiAccordion behavior opens when clicked once 1`] = `
<EuiAccordion
  id="5"
  initialIsOpen={false}
  paddingSize="none"
>
  <div
    className="euiAccordion euiAccordion-isOpen"
  >
    <EuiFlexGroup
      alignItems="center"
      gutterSize="none"
    >
      <div
        className="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem>
          <div
            className="euiFlexItem"
          >
            <button
              aria-controls="5"
              aria-expanded={true}
              className="euiAccordion__button"
              onClick={[Function]}
              type="button"
            >
              <EuiFlexGroup
                alignItems="center"
                gutterSize="s"
                responsive={false}
              >
                <div
                  className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
                >
                  <EuiFlexItem
                    className="euiAccordion__iconWrapper"
                    grow={false}
                  >
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
                    >
                      <EuiIcon
                        size="m"
                        type="arrowDown"
                      >
                        <EuiIconEmpty
                          className="euiIcon euiIcon--medium euiIcon-isLoading"
                          focusable="false"
                          style={null}
                        >
                          <svg
                            className="euiIcon euiIcon--medium euiIcon-isLoading"
                            focusable="false"
                            height={16}
                            style={null}
                            viewBox="0 0 16 16"
                            width={16}
                            xmlns="http://www.w3.org/2000/svg"
                          />
                        </EuiIconEmpty>
                      </EuiIcon>
                    </div>
                  </EuiFlexItem>
                  <EuiFlexItem
                    className="euiAccordion__buttonContent"
                  >
                    <div
                      className="euiFlexItem euiAccordion__buttonContent"
                    />
                  </EuiFlexItem>
                </div>
              </EuiFlexGroup>
            </button>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
    <div
      className="euiAccordion__childWrapper"
      id="5"
    >
      <EuiMutationObserver
        observerOptions={
          Object {
            "attributeFilter": Array [
              "style",
            ],
            "childList": true,
            "subtree": true,
          }
        }
        onMutation={[Function]}
      >
        <div>
          <div
            className=""
          />
        </div>
      </EuiMutationObserver>
    </div>
  </div>
</EuiAccordion>
`;

exports[`EuiAccordion is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiAccordion testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <button
        aria-controls="0"
        aria-expanded="false"
        class="euiAccordion__button"
        type="button"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
          >
            <svg
              class="euiIcon euiIcon--medium euiIcon-isLoading"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
          <div
            class="euiFlexItem euiAccordion__buttonContent"
          />
        </div>
      </button>
    </div>
  </div>
  <div
    class="euiAccordion__childWrapper"
    id="0"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonContent is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <button
        aria-controls="2"
        aria-expanded="false"
        class="euiAccordion__button"
        type="button"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
          >
            <svg
              class="euiIcon euiIcon--medium euiIcon-isLoading"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
          <div
            class="euiFlexItem euiAccordion__buttonContent"
          >
            <div>
              Button content
            </div>
          </div>
        </div>
      </button>
    </div>
  </div>
  <div
    class="euiAccordion__childWrapper"
    id="2"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonContentClassName is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <button
        aria-controls="1"
        aria-expanded="false"
        class="euiAccordion__button"
        type="button"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
          >
            <svg
              class="euiIcon euiIcon--medium euiIcon-isLoading"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
          <div
            class="euiFlexItem euiAccordion__buttonContent button content class name"
          />
        </div>
      </button>
    </div>
  </div>
  <div
    class="euiAccordion__childWrapper"
    id="1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props extraAction is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <button
        aria-controls="3"
        aria-expanded="false"
        class="euiAccordion__button"
        type="button"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
          >
            <svg
              class="euiIcon euiIcon--medium euiIcon-isLoading"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
          <div
            class="euiFlexItem euiAccordion__buttonContent"
          />
        </div>
      </button>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button>
        Extra action
      </button>
    </div>
  </div>
  <div
    class="euiAccordion__childWrapper"
    id="3"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props initialIsOpen is rendered 1`] = `
<div
  class="euiAccordion euiAccordion-isOpen"
>
  <div
    class="euiFlexGroup euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <button
        aria-controls="4"
        aria-expanded="true"
        class="euiAccordion__button"
        type="button"
      >
        <div
          class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
        >
          <div
            class="euiFlexItem euiFlexItem--flexGrowZero euiAccordion__iconWrapper"
          >
            <svg
              class="euiIcon euiIcon--medium euiIcon-isLoading"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
          <div
            class="euiFlexItem euiAccordion__buttonContent"
          />
        </div>
      </button>
    </div>
  </div>
  <div
    class="euiAccordion__childWrapper"
    id="4"
  >
    <div>
      <div
        class=""
      >
        <p>
          You can see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;
